--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" link href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
-<body>    
-    <h1>Hello, Makilan Rolison!</h1>
-
-    
+<body>     
+  <nav class="sidebar">
+    <header>
+        <div class="image-text">
+            <span class="image">
+                <img src="picture/Me.png" alt="Me">
+            </span>
+            <div class="text">
+                <span class="name">Makilan Rolison D.</span>
+                <span class="occupation">IT Student</span>
+            </div>
+        </div>
+        <i class="bi bi-arrow-right-circle toggle"></i>
+    </header>
+    <div class="menu-bar">
+        <div class="menu">
+            <ul class="menu-links">
+                <li class="nav-link">
+                    <a href="#">
+                        <span class="textnav"><i class="bi bi-house-door-fill icon"></i>Dashboard</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+  </nav>
 </body>
 </html>
