--- a/index.html
+++ b/index.html
@@ -4,80 +4,154 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" link href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/267a9d673d.js" crossorigin="anonymous"></script>
+    <title>Portfolio</title>
 </head>
 <body>
-    <nav class="sidebar close">
-        <header>
-            <div class="image-text">
-                <span class="image">
-                    <img src="picture/Me.png" alt="Me">
-                </span>
 
-                <div class="text logo-text">
-                    <span class="name">Rolison Makilan</span>
-                    <span class="profession">Web developer</span>
-                </div>
-            </div>
-
-            <i class="bi bi-arrow-right toggle"></i>
-        </header>
-
-        <div class="menu-bar">
-            <div class="menu">
-
-                <ul class="menu-links">
-                    <li class="nav-link">
-                        <a href="#">
-                            <i class="bi bi-house icon"></i>
-                            <span class="text nav-text">Home</span>
-                        </a>
+    <!-- Navbar Start -->
+    <nav class="navbar shadow-sm fixed-top navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">RM</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
-
-                    <li class="nav-link">
-                        <a href="#">
-                            <i class="bi bi-patch-check icon"></i>
-                            <span class="text nav-text">Certificates</span>
-                        </a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
                     </li>
-
-                    <li class="nav-link">
-                        <a href="#">
-                            <i class="bi bi-file-person icon"></i>
-                            <span class="text nav-text">About Me</span>
-                        </a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#education">Education</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="#certificate">Certificates</a>
                 </ul>
             </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
+
+    <!-- Top Section Start -->
+    <section class="top-section py-5 px-2" id="home">
+        <div class="container text-center">
+            <h1 class="mt-5 mb-4">Hi, I'm Rolison</h1>
+            <h3 class="designation">I'm a Student</h3>
+            <h3>- - Temp - -</h3>
+        </div>
+        <img src="picture/stitch.gif" alt="stitch" class="picture">
+    </section>    
+
+
+    <!-- About Section Start -->
+    <section class="about-section py-5 px-3" id="about">
+        <div class="container">
+            <div class="pic">
+                <img class="d-block mx-auto" src="picture/Me.png" alt="Temp Pic">
+            </div>
+            <div class="about-info mt-5">
+                <h2 class="mb-4">About Me</h2>
+                <p>Hi! I'm Rolison D. Makilan. I'm currently a student.
+                    <a href="#" target="_blank">University of Cebu</a>
+                </p>
+                <p>
+                    Currently no idea what to put in here.
+                </p>
             </div>
         </div>
+    </section>
+  
 
-    </nav>
+    <!-- Education Section Start -->
+    <section class="education-section py-5 px-3" id="education">
+        <div class="container">
+            <h2 class="mb-5">Education Info</h2>
+            <table class="mx-auto">
+                <tr>
+                  <th class="optional">Education</th>
+                  <th>Institute</th>
+                  <th>Year</th>
+                </tr>
+                <tr>
+                  <td class="optional">Elementary</td>
+                  <td>TISA II Elementary</td>
+                  <td>Null</td>
 
-    <section class="home">
-        <div class="text">Welcome</div>
+                </tr>
+                <tr>
+                  <td class="optional">Highschool</td>
+                  <td>University of Cebu SHS pri</td>
+                  <td>Null</td>
+
+                </tr>
+                <tr>
+                  <td class="optional">College</td>
+                  <td>University of Cebu Main Campus</td>
+                  <td>Null</td>
+                </tr>
+              </table>
+        </div>
+    </section>
+  
+
+    <!-- Certificate Section Start -->
+    <section class="certificate-section py-5 px-3" id="certificate">
+        <div class="container">
+            <h2 class="mb-5">Certificates</h2>
+            <ul class="mx-auto">
+                <li class="mx-auto">
+                    <div class="certificate-item text-center pt-3 pb-1">
+                        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                        <p class="pt-2">Not Available</p>
+                    </div>
+                </li>
+                <li class="mx-auto">
+                    <div class="certificate-item text-center pt-3 pb-1">
+                        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                        <p class="pt-2">Not Available</p>
+                    </div>
+                </li>
+                <li class="mx-auto">
+                    <div class="certificate-item text-center pt-3 pb-1">
+                        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                        <p class="pt-2">Not Available</p>
+                    </div>
+                </li>
+                <li class="mx-auto">
+                    <div class="certificate-item text-center pt-3 pb-1">
+                        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                        <p class="pt-2">Not Available</p>
+                    </div>
+                </li>
+                <li class="mx-auto">
+                    <div class="certificate-item text-center pt-3 pb-1">
+                        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                        <p class="pt-2">Not Available</p>
+                    </div>
+                </li>
+                <li class="mx-auto">
+                    <div class="certificate-item text-center pt-3 pb-1">
+                        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                        <p class="pt-2">Not Available</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
 
-    <script>
-        const body = document.querySelector('body'),
-      sidebar = body.querySelector('nav'),
-      toggle = body.querySelector(".toggle"),
-      modeSwitch = body.querySelector(".toggle-switch"),
-      modeText = body.querySelector(".mode-text");
 
 
-toggle.addEventListener("click" , () =>{
-    sidebar.classList.toggle("close");
-})
-
-searchBtn.addEventListener("click" , () =>{
-    sidebar.classList.remove("close");
-})
-
-    </script>
+    <!-- Footer Start -->
+    <footer class="bg-dark text-light pb-4 text-center">
+        <h3>&copy;Rolison Makilan</h3>
+    </footer>
 
 </body>
 </html>
