Update Stitch so big

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             </div>
         </div>
     </nav>
-    <!-- Navbar End -->
 
     <!-- Top Section Start -->
     <section class="top-section py-5 px-2" id="home">
@@ -46,7 +45,7 @@
             <h3 class="designation">I'm a Student</h3>
             <h3>- - Temp - -</h3>
         </div>
-        <img src="picture/stitch.gif" alt="stitch" class="picture">
+        <img src="picture/stitch.gif" alt="stitch" class="picture" width="100" height="100">
     </section>    
 
 
