Added Social Media

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script src="js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/267a9d673d.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
 <body>
@@ -58,12 +56,16 @@
             <div class="about-info mt-5">
                 <h2 class="mb-4">About Me</h2>
                 <p>Hi! I'm Rolison D. Makilan. I'm currently a student.
-                    <a href="#" target="_blank">University of Cebu</a>
+                    <a href="https://www.universityofcebu.net/" target="school">University of Cebu</a>
                 </p>
                 <p>
-                    Currently no idea what to put in here.
+                    You can add me here:
                 </p>
-            </div>
+                <div class="btn-group" role="group" aria-label="Basic example">
+                   <a href="https://www.facebook.com/MakilanRolison"> <button type="button" class="btn btn-primary">Facebook</button></a>
+                   <a href="https://www.instagram.com/isonmkn/?hl=en"> <button type="button" class="btn btn-primary">Instagram</button></a>
+                   <a href="https://discord.com/channels/@Kish#2092"> <button type="button" class="btn btn-primary">Discord</button></a>
+                   <a href="https://github.com/Kishiiro"> <button type="button" class="btn btn-primary">GitHub</button></a>
         </div>
     </section>
   
@@ -154,3 +156,4 @@
 
 </body>
 </html>
+
