--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
             <h3 class="designation">I'm a Student</h3>
             <h3>- - Temp - -</h3>
         </div>
-        <img src="picture/stitch.gif" alt="stitch" class="picture" width="100" height="100">
     </section>    
 
 
@@ -61,7 +60,7 @@
                 <p>
                     You can add me here:
                 </p>
-                <div class="btn-group" role="group" aria-label="Basic example">
+                <div class="btn-group position-relative" role="group" aria-label="Basic example">
                    <a href="https://www.facebook.com/MakilanRolison"> <button type="button" class="btn btn-primary">Facebook</button></a>
                    <a href="https://www.instagram.com/isonmkn/?hl=en"> <button type="button" class="btn btn-primary">Instagram</button></a>
                    <a href="https://discord.com/channels/@Kish#2092"> <button type="button" class="btn btn-primary">Discord</button></a>
