edited some errors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="sr-only">Loading...</span>
         </div>
     </div>
-    <!-- Spinner End -->
+
 
 
     <!-- Navbar Start -->
@@ -55,7 +55,7 @@
                 <a href="#skill" class="nav-item nav-link">Skills</a>
             </div>
             <div class="navbar-nav me-auto py-0">
-                <a href="#certificates" class="nav-item nav-link">Certificates</a>
+                <a href="#certificate" class="nav-item nav-link">Certificates</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
 
             </div>
@@ -64,7 +64,6 @@
             </a>
         </div>
     </nav>
-    <!-- Navbar End -->
 
 
     <!-- Header Start -->
@@ -87,7 +86,6 @@
             </div>
         </div>
     </div>
-    <!-- Header End -->
 
     <!-- About Start -->
     <div class="container-xxl py-6" id="about">
@@ -340,7 +338,7 @@
 
 
     <!-- Footer -->
-    <div class="container-fluid bg-dark text-white py-4">
+    <div class="container-fluid bg-primary text-white py-4">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
