added icon and changed some

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>portfolio</title>
+    
+    <title>My Portfolio</title>
+    <link rel="icon" type="svg/png" href="picture/icon.png">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Favicon -->
@@ -78,7 +80,7 @@
                     <h1 class="display-3 mb-3">Rolison D. Makilan</h1>
                     <h2 class="text-primary mb-3">currently learning</h2>
                     <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Web Design, Web Development, Database, Tester </div>
+                    <div class="typed-text d-none">Web Designer, Web Development, Tester</div>
                     
                     <div class="d-flex align-items-center pt-5">
                         <a href="File/Rolison-CV.docx" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
